[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "plusnetportal-exporter"
version = "0.1.0"
description = ""
authors = ["mrw298 <3275620+mrw298@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"
fastapi-utils = "^0.2.1"
httpx = "^0.22.0"
humanfriendly = "^10.0"
cleo = "^0.8.1"
gunicorn = "^20.1.0"
pyOpenSSL = "^22.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = "^6.3.2"
isort = "^5.10.1"
pytest = "^7.0.1"

[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py310']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0


[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]

    source = ["app"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]